tests/expected_invalid_foundation_decl_kind.diag.out
<input>:2:1: error: foundation modules may only declare `record` and `fn`
    state InternalStatus {
    ^^^^^^^^^^^^^^^^^^^^^^
